app/kubernetes/test/ia-core-tools-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ia-core-tools-ingress-test
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "Content-Type: text/html; charset=UTF-8";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
      more_set_headers "Content-Security-Policy: default-src 'self' https://iacoretoolstest.lksnext.com";
      more_set_headers "Cross-Origin-Resource-Policy: same-site";
spec:
  tls:
    - hosts:
        - iacoretoolstest.lksnext.com
      secretName: lksnext-tls-secret
  rules:
    - host: iacoretoolstest.lksnext.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ia-core-tools-service-test
                port:
                  number: 80
